--- a/index.html
+++ b/index.html
@@ -244,6 +244,10 @@
                 href="https://www.linkedin.com/in/tr%C3%BAc-mai-undefined-8281123a9/"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
+              <a
+                href="https://traitamthanxanh.github.io/personal-portfolio/"
+  target="_blank"
+                ><i class="fa-brands fa-github"></i></a>
             </div>
             <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
           </div>
