--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
               <a
-                href="https://traitamthanxanh.github.io/personal-portfolio/"
+                href="https://github.com/traitamthanxanh/personal-portfolio"
   target="_blank"
                 ><i class="fa-brands fa-github"></i></a>
             </div>
